console
Last login: Sat Sep  8 12:53:34 on ttys003
Antons-MacBook-Pro:~ azuev$ python3
Python 3.6.4 |Anaconda, Inc.| (default, Jan 16 2018, 12:04:33)
[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>>
Antons-MacBook-Pro:~ azuev$ python3
Python 3.6.4 |Anaconda, Inc.| (default, Jan 16 2018, 12:04:33)
[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 24+831
855
>>> (24+831)/3
285.0
>>> 24*831
19944
>>>
Antons-MacBook-Pro:~ azuev$ pwd
/Users/azuev
Antons-MacBook-Pro:~ azuev$ cd projects/lesson1/hello.py
-bash: cd: projects/lesson1/hello.py: Not a directory
Antons-MacBook-Pro:~ azuev$ cd projects/lesson1
Antons-MacBook-Pro:lesson1 azuev$ pwd
/Users/azuev/projects/lesson1
Antons-MacBook-Pro:lesson1 azuev$ python3 hello.py
введите ваше имя большими буквами
Fy
Привет, Fy!
Antons-MacBook-Pro:lesson1 azuev$
Antons-MacBook-Pro:lesson1 azuev$ p
Display all 192 possibilities? (y or n)
Antons-MacBook-Pro:lesson1 azuev$ python3
Python 3.6.4 |Anaconda, Inc.| (default, Jan 16 2018, 12:04:33)
[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> a = 2
>>> b = 3
>>> b = 3.5
>>> a + b
5.5
>>> a ** b
11.313708498984761
>>> import math
>>> sin(1)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'sin' is not defined
>>> math.sin(1)
0.8414709848078965
>>> a = 3.14
>>> rouna(a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'rouna' is not defined
>>> round(a)
3
>>> floor(a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'floor' is not defined
>>> math.floor(a)
3
>>> math.ceil(a)
4
>>> a = 'привет'
>>> a.upper()
'ПРИВЕТ'
>>> b = 'HHdhh'
>>> b.lower()
'hhdhh'
>>> a = 'ПРИвет'
>>> a.capitalize()
'Привет'
>>> a = '  !dd tdt  '
>>> a.trim()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'str' object has no attribute 'trim'
>>> a = '!23 '
>>> a.trim()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'str' object has no attribute 'trim'
>>> a = ' 23 '
>>> a.trim()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'str' object has no attribute 'trim'
>>> a =   'Привет'
>>> a.replace('и', 'е')
'Превет'
>>> a = 'введите свое имя'
>>> a.split(' ')
['введите', 'свое', 'имя']
>>> ag
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'ag' is not defined
>>>  age = 26
  File "<stdin>", line 1
    age = 26
    ^
IndentationError: unexpected indent
>>> age = 26
>>> message = 'вам %s лет' % age
>>> message
'вам 26 лет'
>>> age = 32
>>> birth_year = 1986
>>> message = 'Вам {} лет. Вы родились в {} году '.format(age, birth_yaer)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'birth_yaer' is not defined
>>> message = 'Вам {} лет. Вы родились в {} году '.format(age, birth_year)
>>> message
'Вам 32 лет. Вы родились в 1986 году '
>>> password = 'aqwerty1'
>>> for symbol in password:
... print(symbol, symbol.isdigit())
  File "<stdin>", line 2
    print(symbol, symbol.isdigit())
        ^
IndentationError: expected an indented block
>>>     print(symbol, symbol.isdigit())
  File "<stdin>", line 1
    print(symbol, symbol.isdigit())
    ^
IndentationError: unexpected indent
>>> password = 'aqwerty1'
>>>     print(symbol, symbol.isdigit())
  File "<stdin>", line 1
    print(symbol, symbol.isdigit())
    ^
IndentationError: unexpected indent
>>> print(symbol, symbol.isdigit())
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'symbol' is not defined
>>> for symbol in password:
... print(symbol, symbol.isdigit())
  File "<stdin>", line 2
    print(symbol, symbol.isdigit())
        ^
IndentationError: expected an indented block
>>> for symbol in password:
...    print(symbol, symbol.isdigit())
...
a False
q False
w False
e False
r False
t False
y False
1 True
>>> a = 2
>>> type(a)
<class 'int'>
>>> a = '2.0'
>>> type(a)
<class 'str'>
>>> a = 2
>>> b = int(input())
3
>>> print(a + b)
5
>>> v = input('введите число от 1 до 10')
введите число от 1 до 109
>>> print(v + 10)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: must be str, not int
>>> print(str(v + 10))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: must be str, not int
>>> v
'9'
>>> print(int(v) + 10)
19
>>> name = input('введите ваше имя: ')
введите ваше имя: антон
>>> print('Привет, {}! Как дела?'.format(namе))
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'namе' is not defined
>>> name
'антон'
>>> print('Привет,' + name + '! Как дела?')
Привет,антон! Как дела?
>>> print('Привет, ' + name + '! Как дела?')
Привет, антон! Как дела?
>>> float('1')
1.0
>>> int('2.5')
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ValueError: invalid literal for int() with base 10: '2.5'
>>> bool('1')
True
>>> bool(' ')
True
>>> bool('')
False
>>> bool(0)
False
>>> а = [1, 6, 8, 5, 2]
>>> a[0]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'int' object is not subscriptable
>>> a[1]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'int' object is not subscriptable
>>>
>>> a[10]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'int' object is not subscriptable
>>> print(a)
2
>>> c = [1, 2, 5, 7, 3]
>>> c[0]
1
>>>
Antons-MacBook-Pro:lesson1 azuev$
Antons-MacBook-Pro:lesson1 azuev$

Antons-MacBook-Pro:lesson1 azuev$
Antons-MacBook-Pro:lesson1 azuev$
Antons-MacBook-Pro:lesson1 azuev$ python3
Python 3.6.4 |Anaconda, Inc.| (default, Jan 16 2018, 12:04:33)
[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> a = [1, 2, 3, 7, 8]
>>> a[2, 3]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: list indices must be integers or slices, not tuple
>>> a[2:3]
[3]
>>> a[2:4]
[3, 7]
>>> a.append(99)
>>> a
[1, 2, 3, 7, 8, 99]
>>> reversed(a)
<list_reverseiterator object at 0x10c4f3710>
>>> scores = [1, 2, 3]
>>> for s in scores:
...     print(s)
...
1
2
3
>>> reversed(scores)
<list_reverseiterator object at 0x10c4f3780>
>>> scores  [3, 1, 2, 4]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: list indices must be integers or slices, not tuple
>>> scores = [3, 1, 2, 4]
>>> sorted(scores)
[1, 2, 3, 4]
>>> mylist = ["Вася", "Маша", "Петя", "Саша"]
>>> print(mylist)
['Вася', 'Маша', 'Петя', 'Саша']
>>>
>>> len(mylist)
4
>>> mylist.append("Маша")
>>> len(mylist)
5
>>> mylist.count("Маша")
2
>>> mylist.count("Ольга")
0
>>> mylist[1]
'Маша'
>>> mylist[3]
'Саша'
>>> mylist[2:4]
['Петя', 'Саша']
>>> print(mylist)
['Вася', 'Маша', 'Петя', 'Саша', 'Маша']
>>> mylist[:2]
['Вася', 'Маша']
>>> mylist[-1]
'Маша'
>>> mylist[6]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> mylist.index("Петя")
2
>>> mylist.sort()
>>> print(mylist)
['Вася', 'Маша', 'Маша', 'Петя', 'Саша']
>>> mylist.index("Петя")
3
>>> 'Вася' in mylist
True
>>> 'Даша' in mylist
False
>>> del mylist[3]
>>> print(mylist)
['Вася', 'Маша', 'Маша', 'Саша']
>>> mylist.remove('Маша')
>>> print(mylist)
['Вася', 'Маша', 'Саша']
>>> list = [2, 3, 4, 5, 6, 7]
>>> print(list)
[2, 3, 4, 5, 6, 7]
>>> list.append('Python')
>>> print(list)
[2, 3, 4, 5, 6, 7, 'Python']
>>> len(list)
7
>>> list[0]
2
>>> list[-1]
'Python'
>>> list[1:5]
[3, 4, 5, 6]
>>> list[1:4]
[3, 4, 5]
>>> del list[-1]
>>> print(list)
[2, 3, 4, 5, 6, 7]
>>> user = {"name": "Маша", "age": 25, "have_airplane": False}
>>> print(user)
{'name': 'Маша', 'age': 25, 'have_airplane': False}
>>> {'have_airplane': False, 'name': 'Маша', 'age': 25}
{'have_airplane': False, 'name': 'Маша', 'age': 25}
>>> len(user)
3
>>> user["city"] = "Moscow"
>>> print(user)
{'name': 'Маша', 'age': 25, 'have_airplane': False, 'city': 'Moscow'}
>>> user["city"] = "Moscow"
>>> print(user)
{'name': 'Маша', 'age': 25, 'have_airplane': False, 'city': 'Moscow'}
>>> user["have_airplane"] = True
>>> print(user)
{'name': 'Маша', 'age': 25, 'have_airplane': True, 'city': 'Moscow'}
>>> user["name"]
'Маша'
>>> user['country']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'country'
>>> user.get("name")
'Маша'
>>> print(user.get("country"))
None
>>> user.get("country", "Russia")
'Russia'
>>> user.get("balance", 0)
0
>>> del user["city"]
>>> user
{'name': 'Маша', 'age': 25, 'have_airplane': True}
>>> user["friends"] = mylist
>>> user
{'name': 'Маша', 'age': 25, 'have_airplane': True, 'friends': ['Вася', 'Маша', 'Саша']}
>>> all_users = [
...     {'name': 'Маша', 'age': 25, 'have_airplane': True},
...     {'name': 'Вася', 'age': 8, 'have_airplane': False},
...     {'name': 'Эдуард', 'age': 48, 'job': 'Big boss'},
... ]
>>> dict = {
... 'city': 'Москва',
... 'temperature': '20'
... }
>>> dict['city']
'Москва'
>>> int(dict[temperature]) - 5
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'temperature' is not defined
>>> int(dict['temperature']) - 5
15
>>> dict
{'city': 'Москва', 'temperature': '20'}
>>> dict['temperature'] = int(dict['temperature']) - 5
>>> dict
{'city': 'Москва', 'temperature': 15}
>>> dict['country']
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
KeyError: 'country'
>>> dict.get('country', 'Россия')
'Россия'
>>> python3 ~/projects/